TestSuite/errors/err0312.pas
type
  T = class
    static procedure P(); reintroduce := exit;
  end;

begin
end.